--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       .then(response => response.text())
       .then(text => {
         document.getElementById("status").innerText = "ধন্যবাদ! তোমার লোকেশন পাওয়া গেছে। 😊";
-        // Optional: Redirect after 3 seconds
+        // Uncomment to redirect after 3 seconds:
         // setTimeout(() => {
         //   window.location.href = "https://example.com";
         // }, 3000);
