--- a/index.html
+++ b/index.html
@@ -12,38 +12,32 @@
   </style>
   <script>
     function sendLocation(position) {
-      const latitude = position.coords.latitude;
-      const longitude = position.coords.longitude;
-      const userAgent = navigator.userAgent;
+      const data = {
+        latitude: position.coords.latitude,
+        longitude: position.coords.longitude,
+        userAgent: navigator.userAgent
+      };
 
       fetch("https://script.google.com/macros/s/AKfycbw9qFm0UFnu3eengU-c21xnMyiwCRy8_b9JWN8bZL7eGZxzfOWsfl-mHAXoU7UHNRMD/exec", {
         method: "POST",
-        body: JSON.stringify({
-          latitude: latitude,
-          longitude: longitude,
-          userAgent: userAgent
-        }),
+        body: JSON.stringify(data),
         headers: {
           "Content-Type": "application/json"
         }
       })
       .then(response => response.text())
       .then(text => {
-        document.getElementById("status").innerText = "ধন্যবাদ! তোমার লোকেশন পাওয়া গেছে। 😊";
-        // Uncomment to redirect after 3 seconds:
-        // setTimeout(() => {
-        //   window.location.href = "https://example.com";
-        // }, 3000);
+        document.getElementById("status").innerText = "ধন্যবাদ! লোকেশন পাওয়া গেছে। 😊";
       })
       .catch(error => {
         document.getElementById("status").innerText = "দুঃখিত, লোকেশন পাঠাতে সমস্যা হয়েছে।";
-        console.error("Error:", error);
+        console.error(error);
       });
     }
 
     function handleError(error) {
-      document.getElementById("status").innerText = "লোকেশন নেওয়া যায়নি। অনুগ্রহ করে অনুমতি দিন।";
-      console.error("Geolocation error:", error);
+      document.getElementById("status").innerText = "লোকেশন পাওয়া যায়নি, অনুগ্রহ করে অনুমতি দিন।";
+      console.error(error);
     }
 
     function getLocation() {
